--- a/Views/CameraUserControlView.xaml
+++ b/Views/CameraUserControlView.xaml
@@ -23,8 +23,17 @@
                      SelectedIndex="{Binding SelectedDeviceIndex, Mode=TwoWay}" />
             <Button x:Name="btnFilterImage" Content="Camera On/Off" 
                     Command="{Binding TurnOnOff}"
-                    MinWidth="60" MinHeight="30" Style="{StaticResource BtnStyle}" Margin="1"
+                    MinWidth="60" MinHeight="35" Style="{StaticResource BtnStyle}" Margin="1"
                     ToolTip="Turn On/Off camera"/>
+            <Border x:Name="border" Background="#16161A" BorderBrush="#424248" 
+                    BorderThickness="1, 1, 0, 1" CornerRadius="2" Margin="10, 7, 0, 7">
+                <TextBlock Text="Update Face detection, sec:" 
+                        Margin="2" FontSize="16" Foreground="White"
+                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Border>
+           
+            <TextBox Style="{StaticResource TextBoxStyle}" MinWidth="50" Margin="0"
+                     Text="{Binding DetectionUpdateFreqText , UpdateSourceTrigger=PropertyChanged}"/>
 
         </StackPanel>
     </Grid>
